--- a/views/products.html
+++ b/views/products.html
@@ -8,5 +8,10 @@
     </head>
 <body>
     <h1>Fetching all products</h1>
+    <form>
+        <label for="product">Product Name</label>
+        <input type="text" id="product" name="productName" required/>
+        <button type="submit">Add Product</button>
+    </form>
 </body>
 </html>
