--- a/views/products.html
+++ b/views/products.html
@@ -8,10 +8,12 @@
     </head>
 <body>
     <h1>Fetching all products</h1>
-    <form>
+    <form onsubmit="onSubmitHandler(event)">
         <label for="product">Product Name</label>
         <input type="text" id="product" name="productName" required/>
         <button type="submit">Add Product</button>
     </form>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <script src="/js/product.js"></script>
 </body>
 </html>
